# netbox-cable-patcher

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
develop/: Dockerfile  configuration.py  dev.env  docker-compose.yml  manage.py
netbox_cable_patcher/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_cable_patcher/api/: __init__.py  serializers.py  urls.py  views.py
netbox_cable_patcher/static/netbox_cable_patcher/css/: patcher.css
netbox_cable_patcher/static/netbox_cable_patcher/js/: patcher.js
netbox_cable_patcher/templates/netbox_cable_patcher/: patcher.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_netbox_cable_patcher.py
